# flask-tutorial

./: README.md  makefile  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py
tests/: conftest.py  test_blog.py  test_db.py
